--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,7 @@
 
 body {
   font-family: Impact, sans-serif;
-  background: url(images/tiger-king-background.jpg) no-repeat center center
+  background: url(images/background.jpg) no-repeat center center
     fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
